# s3-datasets

./: .gitignore  LICENSE  README.md  example.env  publish_to_pypi.sh  pyproject.toml  requirements.txt  setup.py
examples/: domain_tune_llm.py
src/s3datasets/: __init__.py  s3_dataset.py  s3_json_dataset.py  s3_text_dataset.py
src/tokengenerators/: __init__.py  text_ds_2_tokens_generator.py
src/typedjson/: __init__.py  typedjson.py
tests/: conftest.py  test_s3_text_dataset.py  test_text_ds_2_tokens_generator.py
tests/fixtures/: 2212.08120.txt  2301.12132v2.txt  2303.02861.txt  2305.10250.txt  pg29475_under_arctic_ice_pt_1.txt  pg29475_under_arctic_ice_pt_2.txt  pg46_christmas_carol_pt_1.txt  pg46_christmas_carol_pt_2.txt  pg46_christmas_carol_pt_3.txt  pg67732_the_overman_by_upton_sinclair_pt_1.txt  pg67732_the_overman_by_upton_sinclair_pt_2.txt
utilities/: vast_sync.bash
